mortgage tree table and line chart

--- a/client/project/src/app/app.component.html
+++ b/client/project/src/app/app.component.html
@@ -20,7 +20,7 @@
 
   <ng-template pTemplate="end">
     <!-- <input type="text" pInputText placeholder="Search" class="w-full" /> -->
-    <div class="application-name fs-2">
+    <div class="application-name fs-2" [routerLink]="'/dashboard'">
       <p>am<span class="primary">.app</span></p>
     </div>
   </ng-template>
