--- a/client/project/src/app/component/add-transaction/add-transaction.component.html
+++ b/client/project/src/app/component/add-transaction/add-transaction.component.html
@@ -105,6 +105,7 @@
             [autoResize]="true"
             rows="8"
             formControlName="remarks"
+            placeholder="For mortgage monthly repayment, please enter mortgage ID (i.e. #Mortgage-1)"
             [style]="{ width: '100%' }"
           ></textarea>
         </div>
