--- a/client/project/src/app/component/investment-dashboard/investment-dashboard.component.html
+++ b/client/project/src/app/component/investment-dashboard/investment-dashboard.component.html
@@ -5,7 +5,7 @@
     [home]="breadcrumbHome"
   ></p-breadcrumb>
   <div class="row justify-content-center align-items-center">
-    <div class="col-8 text-center my-5 h1card">
+    <div class="col-8 text-center ms-3 mb-5 h1card">
       <h1>Portfolio Dashbooard</h1>
     </div>
 
