--- a/client/project/src/app/component/dashboard/dashboard.component.html
+++ b/client/project/src/app/component/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row justify-content-center align-items-center">
-    <div class="col-10 text-center my-5 h1card">
+    <div class="col-10 text-center ms-3 mb-5 h1card">
       <h1>{{ userGreeting }} {{ username() | titlecase }}</h1>
       <div *ngIf="quoteOfTheDay" class="mt-3">
         <p class="mb-0 font-monospace fs-5">"{{ quoteOfTheDay }}"</p>
