--- a/client/project/src/app/component/savings/savings.component.html
+++ b/client/project/src/app/component/savings/savings.component.html
@@ -5,7 +5,7 @@
     [home]="breadcrumbHome"
   ></p-breadcrumb>
   <div class="row justify-content-center align-items-center g-2">
-    <div class="col-10 text-center my-5 h1card">
+    <div class="col-10 text-center mt-3 mb-5 h1card">
       <h1>
         Savings Dashbooard
         <span
@@ -147,28 +147,27 @@
           <ng-template pTemplate="content">
             <h6>Category:</h6>
             <form [formGroup]="categoryForm">
-              <input
-                pInputText
-                class="p-inputtext-sm"
-                placeholder="Category name"
-                formControlName="category"
-              />
-              <!-- <p-toggleButton
-                formControlName="type"
-                onLabel="Expense"
-                offLabel="Income"
-              ></p-toggleButton> -->
-              <p-selectButton
-                [options]="typeOptions"
-                formControlName="type"
-                optionLabel="label"
-                optionValue="value"
-              ></p-selectButton>
-              <p-button
-                label="Add"
-                styleClass="p-button-text"
-                (onClick)="addCategory()"
-              ></p-button>
+              <div class="d-flex justify-content-center align-items-center">
+                <input
+                  pInputText
+                  class="p-inputtext-sm"
+                  placeholder="Category name"
+                  formControlName="category"
+                />
+                <p-selectButton
+                  [options]="typeOptions"
+                  formControlName="type"
+                  optionLabel="label"
+                  optionValue="value"
+                ></p-selectButton>
+              </div>
+              <div class="d-flex justify-content-center align-items-center">
+                <p-button
+                  label="Add"
+                  styleClass="p-button-text"
+                  (onClick)="addCategory()"
+                ></p-button>
+              </div>
             </form>
           </ng-template>
         </p-overlayPanel>
