--- a/client/project/src/app/component/transaction-records/transaction-records.component.html
+++ b/client/project/src/app/component/transaction-records/transaction-records.component.html
@@ -5,7 +5,7 @@
     [home]="breadcrumbHome"
   ></p-breadcrumb>
   <div class="row justify-content-center align-items-center g-2">
-    <div class="col-10 text-center my-5 h1card">
+    <div class="col-10 text-center mt-3 mb-5 h1card">
       <div class="d-flex flex-column">
         <div>
           <h3>Transaction Records</h3>
