--- a/client/project/src/styles.css
+++ b/client/project/src/styles.css
@@ -28,6 +28,14 @@ a {
   text-decoration: none !important;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: "Righteous", cursive !important;
+}
+
 /*grow vertically*/
 /* .app-root {
   flex: 1 1 auto; 
@@ -43,7 +51,6 @@ a {
   box-shadow: 5px 10px var(--primary-color);
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
-  font-family: "Press Start 2P", cursive;
   color: var(--text-color);
   /* border: 1px solid rgba(255, 255, 255, 0.31);
     border-radius: 16px; */
