--- a/client/project/src/app/component/add-transaction/add-transaction.component.html
+++ b/client/project/src/app/component/add-transaction/add-transaction.component.html
@@ -118,7 +118,7 @@
               icon="pi pi-check"
               class="p-button-text"
               (click)="saveTransaction()"
-              [disabled]="form.invalid"
+              [disabled]="invalidForm()"
             ></button>
           </div>
         </div>
