--- a/client/project/src/app/component/transaction-records/transaction-records.component.html
+++ b/client/project/src/app/component/transaction-records/transaction-records.component.html
@@ -19,21 +19,73 @@
               (click)="showDialog()"
             >
               {{ startDate() }} - {{ endDate() }}
+              <fa-icon [icon]="editIcon"></fa-icon>
             </span>
           </h3>
         </div>
         <div class="mt-3 record-summary">
-          <div>
-            <h4>=> Record type: {{ typeOfRecord() | titlecase }}</h4>
+          <div class="row justify-content-center align-items-center">
+            <div class="col-4">
+              <div class="d-flex justify-content-between align-items-center">
+                <div>
+                  <h4>Record type:</h4>
+                </div>
+                <div class="text-start">
+                  <h4>
+                    {{ typeOfRecord() | titlecase }}
+                  </h4>
+                </div>
+              </div>
+            </div>
           </div>
           <div *ngIf="typeOfRecord() === 'all' || typeOfRecord() === 'income'">
-            <h4>=> Total Income: {{ totalIncome() | currency }}</h4>
+            <div class="row justify-content-center align-items-center">
+              <div class="col-4">
+                <div class="d-flex justify-content-between align-items-center">
+                  <div>
+                    <h4>Total Income:</h4>
+                  </div>
+                  <div>
+                    <h4>
+                      {{ totalIncome() | currency }}
+                    </h4>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
           <div *ngIf="typeOfRecord() === 'all' || typeOfRecord() === 'expense'">
-            <h4>=> Total Expense: {{ totalExpense() | currency }}</h4>
+            <div class="row justify-content-center align-items-center">
+              <div class="col-4">
+                <div class="d-flex justify-content-between align-items-center">
+                  <div>
+                    <h4>Total Expense:</h4>
+                  </div>
+
+                  <div>
+                    <h4>
+                      {{ totalExpense() | currency }}
+                    </h4>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
           <div *ngIf="typeOfRecord() === 'all'">
-            <h4>=> Total Balance: {{ totalBalance() | currency }}</h4>
+            <div class="row justify-content-center align-items-center">
+              <div class="col-4">
+                <div class="d-flex justify-content-between align-items-center">
+                  <div>
+                    <h4>Total Balance:</h4>
+                  </div>
+                  <div>
+                    <h4>
+                      {{ totalBalance() | currency }}
+                    </h4>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -358,7 +410,7 @@
                     (click)="onRowEditInit(transaction)"
                     class="p-button-rounded p-button-text"
                   ></button>
-                  <p-confirmPopup></p-confirmPopup>
+
                   <button
                     *ngIf="!editing"
                     pButton
