integrate payment gateway paypal

--- a/client/project/src/app/app.component.css
+++ b/client/project/src/app/app.component.css
@@ -8,6 +8,47 @@
   cursor: pointer;
 }
 
+/* DIALOG */
+dialog::backdrop {
+  background-color: rgba(112, 111, 111, 0.5);
+}
+
+#dialogModal {
+  box-shadow: 5px 10px #888888;
+  border-radius: 8px;
+  border: none;
+  font-family: "Righteous", cursive;
+  width: 50dvw;
+}
+
+#dialogModal header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+#dialogSubmitButton {
+  background-color: green;
+  border: none;
+  color: white;
+  padding: 12px 32px;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  box-shadow: 2px 4px #888888;
+}
+
+#closeDialogFooterBtn {
+  background-color: gray;
+  border: none;
+  color: white;
+  padding: 12px 32px;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  box-shadow: 2px 4px #888888;
+}
+
 /* FOOTER */
 footer {
   /* position: sticky; */
