--- a/client/project/src/app/app.component.html
+++ b/client/project/src/app/app.component.html
@@ -97,7 +97,7 @@
           <div class="col">
             <p class="fs-4">Total Assets:</p>
           </div>
-          <div class="col">
+          <div class="col text-end">
             <p class="fs-4">{{ totalValue() | currency }}</p>
           </div>
         </div>
@@ -106,7 +106,7 @@
           <div class="col">
             <p class="fs-4">Investment:</p>
           </div>
-          <div class="col">
+          <div class="col text-end">
             <p class="fs-4">{{ stocksValue() | currency }}</p>
           </div>
         </div>
@@ -115,7 +115,7 @@
           <div class="col">
             <p class="fs-4">Savings:</p>
           </div>
-          <div class="col">
+          <div class="col text-end">
             <p class="fs-4">{{ savingsValue() | currency }}</p>
           </div>
         </div>
@@ -124,7 +124,7 @@
           <div class="col">
             <p class="fs-4">Mortgages:</p>
           </div>
-          <div class="col">
+          <div class="col text-end">
             <p class="fs-4">{{ mortgageNumber() }}</p>
           </div>
         </div>
