--- a/client/project/src/app/component/dashboard/dashboard.component.html
+++ b/client/project/src/app/component/dashboard/dashboard.component.html
@@ -359,10 +359,17 @@
             </h5>
           </div>
 
-          <div class="add-transaction" [routerLink]="'/savings'">
+          <div class="add-transaction mb-3" [routerLink]="'/savings'">
             <h5>
               <fa-icon [icon]="pointRightIcon"></fa-icon>
               Add expense and income record to your savings
+            </h5>
+          </div>
+
+          <div class="add-transaction" [routerLink]="'/mortgage-dashboard'">
+            <h5>
+              <fa-icon [icon]="pointRightIcon"></fa-icon>
+              Add mortgage profile
             </h5>
           </div>
         </div>
